--- a/ASPMVC_EF_Music/Web.config
+++ b/ASPMVC_EF_Music/Web.config
@@ -56,7 +56,7 @@
   <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
     <parameters>
       <!--<parameter value="Data Source=.; Integrated Security=True; "/>-->
-      <parameter value="server = .; integrated security = true; database = myMusicDatabase;"/>
+      <parameter value="server = .; integrated security = true;"/>
     </parameters>
   </defaultConnectionFactory>
   <providers>
