--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -72,6 +72,7 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\CRUDJunctionRepository.cs" />
     <Compile Include="Repository\Repositories.cs" />
     <Compile Include="Repository\CRUDRepository.cs" />
     <Compile Include="Repository\IRepository.cs" />
