Add SQL create DB script + ERD

--- a/ASPMVC_EF_Music/ASPMVC_EF_Music.csproj
+++ b/ASPMVC_EF_Music/ASPMVC_EF_Music.csproj
@@ -143,6 +143,31 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710131442000_initial.cs" />
+    <Compile Include="Migrations\201710131442000_initial.Designer.cs">
+      <DependentUpon>201710131442000_initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201710201257024_change2.cs" />
+    <Compile Include="Migrations\201710201257024_change2.Designer.cs">
+      <DependentUpon>201710201257024_change2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201710301045350_change-3.cs" />
+    <Compile Include="Migrations\201710301045350_change-3.Designer.cs">
+      <DependentUpon>201710301045350_change-3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201710301134207_change21.cs" />
+    <Compile Include="Migrations\201710301134207_change21.Designer.cs">
+      <DependentUpon>201710301134207_change21.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711011136406_change4.cs" />
+    <Compile Include="Migrations\201711011136406_change4.Designer.cs">
+      <DependentUpon>201711011136406_change4.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711051533452_change5.cs" />
+    <Compile Include="Migrations\201711051533452_change5.Designer.cs">
+      <DependentUpon>201711051533452_change5.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -239,6 +264,26 @@
       <Project>{370256fb-dce6-4330-8e37-36cbf1e82513}</Project>
       <Name>Models</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201710131442000_initial.resx">
+      <DependentUpon>201710131442000_initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710201257024_change2.resx">
+      <DependentUpon>201710201257024_change2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710301045350_change-3.resx">
+      <DependentUpon>201710301045350_change-3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710301134207_change21.resx">
+      <DependentUpon>201710301134207_change21.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711011136406_change4.resx">
+      <DependentUpon>201711011136406_change4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711051533452_change5.resx">
+      <DependentUpon>201711051533452_change5.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
